--- a/crudangular_1.client/src/app/navbar/navbar.component.html
+++ b/crudangular_1.client/src/app/navbar/navbar.component.html
@@ -1,1 +1,13 @@
-<p>navbar works!</p>
+<nav class="bg-gray-800 p-4 flex items-center justify-between">
+  <div class="flex items-center">
+    <button (click)="toggleSidebar()" class="text-white focus:outline-none">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+    <span class="text-white text-lg ml-2">MK</span>
+  </div>
+  <div class="flex items-center">
+    <button (click)="logout()" class="ml-4 bg-red-500 text-white py-2 px-4 rounded">Wyloguj</button>
+  </div>
+</nav>
