--- a/crudangular_1.client/src/app/sidebar/sidebar.component.html
+++ b/crudangular_1.client/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,17 @@
-<p>sidebar works!</p>
+<aside [ngClass]="{
+    '-translate-x-full': !(isOpen | async),
+    'translate-x-0 lg:translate-x-0 lg:relative': isOpen | async
+  }"
+       class="sidebar bg-gray-900 text-white w-64 h-screen fixed lg:relative transition-transform duration-300 ease-in-out z-50">
+  <div class="p-4">
+    <h1 class="text-xl font-bold">COMPONENTS</h1>
+    <ul class="mt-4">
+      <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Dashboard</a></li>
+      <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Kalendarz</a></li>
+      <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Notatka</a></li>
+      <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Wyloguj</a></li>
+   
+    </ul>
+    <button class="mt-4 bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">View Source</button>
+  </div>
+</aside>
