--- a/crudangular_1.client/src/app/layout/sidebar/sidebar.component.html
+++ b/crudangular_1.client/src/app/layout/sidebar/sidebar.component.html
@@ -6,12 +6,10 @@
   <div class="p-4">
     <h1 class="text-xl font-bold">COMPONENTS</h1>
     <ul class="mt-4">
-      <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Dashboard</a></li>
+      <li class="my-2"><a routerLink ="/dashboard" RouterLinkActive="bg-gray-700" class="hover:bg-gray-700 p-2 block">Dashboard</a></li>
       <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Kalendarz</a></li>
       <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Notatka</a></li>
       <li class="my-2"><a href="#" class="hover:bg-gray-700 p-2 block">Wyloguj</a></li>
-   
     </ul>
-    <button class="mt-4 bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">View Source</button>
   </div>
 </aside>
