--- a/crudangular_1.client/src/app/app.component.css
+++ b/crudangular_1.client/src/app/app.component.css
@@ -1,6 +1,6 @@
 .flex {
   display: flex;
-  min-height: 100vh;
+  min-height: 120vh;
 }
 
 main.flex-grow {
@@ -22,6 +22,6 @@ app-navbar {
   left: 0;
   right: 0;
   z-index: 1000;
-  background-color: #3f51b5; /* Kolor tła paska nawigacyjnego */
+  background-color: #3f51b5; 
   color: white;
 }
