--- a/crudangular_1.client/src/app/pages/client/client.component.html
+++ b/crudangular_1.client/src/app/pages/client/client.component.html
@@ -1,16 +1,115 @@
-<div class="container mx-auto p-4">
+<div class="container mx-auto p-8 ">
   <h2 class="text-xl font-bold mb-4">Panel klientów</h2>
-  <div class="mb-4">
-    <input type="text" [(ngModel)]="newClient.name" placeholder="Client Name" class="border p-2 mr-2" />
-    <input type="email" [(ngModel)]="newClient.email" placeholder="Client Email" class="border p-2 mr-2" />
-    <button (click)="addClient()" class="bg-blue-500 text-white px-4 py-2">Add Client</button>
+
+
+  <div class=" min-w-full max-w-lg grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-4 ">
+
+    <a (click)="toggleList()" class="inline-block rounded border border-indigo-600 px-12 py-3 text-sm font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500">
+      List
+    </a>
+
+    <a (click)="toggleEdit()" class="inline-block rounded border border-indigo-600 px-12 py-3 text-sm font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500">
+      Edit
+    </a>
+    <a (click)="toggleAdd()" class="inline-block rounded border border-indigo-600 px-12 py-3 text-sm font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500">
+      Add
+    </a>
   </div>
-  <ul class="list-disc pl-6">
-    <li *ngFor="let client of clients" class="mb-5">
-      <input [(ngModel)]="client.name" class="border p-2 mr-5" />
-      <input [(ngModel)]="client.email" class="border p-3 mr-5 " />
-      <button (click)="editClient(client)" class="bg-yellow-500 text-white px-4 py-2 mr-2">Edit</button>
-      <button (click)="deleteClient(client.id)" class="bg-red-500 text-white px-4 py-2">Delete</button>
-    </li>
-  </ul>
+
+
+
+  @switch (state) {
+  @case('List')
+  {
+  <table class="min-w-full divide-y-2 divide-gray-200 bg-white text-sm">
+    <thead class="ltr:text-left rtl:text-right">
+      <tr>
+        <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">ID</th>
+        <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">Nazwa</th>
+        <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">Email</th>
+        <th class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">Bio</th>
+      </tr>
+    </thead>
+
+    @for (client of clients;track client.name)
+    {
+    <tbody class="divide-y divide-gray-200">
+      <tr>
+        <td class="whitespace-nowrap px-4 py-2 font-medium text-gray-900">{{client.id}}</td>
+        <td class="whitespace-nowrap px-4 py-2 text-gray-700">{{client.name}}</td>
+        <td class="whitespace-nowrap px-4 py-2 text-gray-700">{{client.email}}</td>
+        <td class="whitespace-nowrap px-4 py-2 text-gray-700">{{client.bio}}</td>
+      </tr>
+    </tbody>
+
+    }
+  </table>
+
+  }
+  @case('Add')
+  {
+  <div class="flex justify-center ">
+    <div class="p-5 flex flex-col space-y-4">
+      <label for="Nazwa"
+             class="min-w-80 max-w-lg relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
+        <input type="text"
+               id="Nazwa"
+               [(ngModel)]="newClient.name"
+               class=" min-h-16 peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+               placeholder="Nazwa" />
+
+        <span class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs">
+          Nazwa
+        </span>
+      </label>
+
+      <label for="UserEmail"
+             class="min-w-80 max-w-lg relative block overflow-hidden rounded-md border border-gray-200 px-3 pt-3 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
+        <input type="email"
+               id="UserEmail"
+               placeholder="Email"
+               [(ngModel)]="newClient.email"
+               class="peer min-h-16 w-full border-none bg-transparent p-0 placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0 sm:text-sm" />
+        <span class="absolute start-3 top-3 -translate-y-1/2 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-3 peer-focus:text-xs">
+          Email
+        </span>
+      </label>
+
+      <label for="Opis"
+             class="min-w-80 max-w-lg relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
+        <input type="text"
+               id="Opis"
+               [(ngModel)]="newClient.bio"
+               class=" min-h-16 peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+               placeholder="Opis" />
+        <span class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs">
+          Opis
+        </span>
+      </label>
+      <a (click)="addClient()" class="inline-block rounded border border-indigo-600 px-12 py-3 text-sm font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-600">
+        Add
+      </a>
+    </div>
+  </div>
+
+
+  }
+  @case('Edit')
+  {
+  @for (client of clients;track client.name)
+  {
+  <li class="mb-5">
+    <input [(ngModel)]="client.name" class="border p-2 mr-5" />
+    <input [(ngModel)]="client.email" class="border p-3 mr-5 " />
+    <input [(ngModel)]="client.bio" class="border p-3 mr-5 " />
+    <button (click)="editClient(client)" class="bg-yellow-500 text-white px-4 py-2 mr-2">Edit</button>
+    <button (click)="deleteClient(client.id)" class="bg-red-500 text-white px-4 py-2">Delete</button>
+  </li>
+  }
+  }
+  }
+
 </div>
+
+
+
