--- a/crudangular_1.client/src/app/layout/sidebar/sidebar.component.html
+++ b/crudangular_1.client/src/app/layout/sidebar/sidebar.component.html
@@ -33,13 +33,34 @@
         <a (click)="toggleCoursesSubmenu()" class="hover:bg-gray-700 p-2 block">Kurs</a>
         <ul *ngIf="isCoursesSubmenuOpen" class="ml-4">
           <li class="my-2">
-            <a routerLink="/firstlesson" RouterLinkActive="bg-gray-700" class="hover:bg-gray-700 p-2 block">Pierwsza lekcja</a>
+            <a routerLink="/firstlesson" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Pierwsza lekcja</a>
           </li>
           <li class="my-2">
-            <a routerLink="/clock" RouterLinkActive="bg-gray-700" class="hover:bg-gray-700 p-2 block">Clock</a>
+            <a routerLink="/clock" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Clock</a>
           </li>
           <li class="my-2">
-            <a routerLink="/courses/subpage3" RouterLinkActive="bg-gray-700" class="hover:bg-gray-700 p-2 block">Subpage 3</a>
+            <a routerLink="/fun3" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Fun</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/elementRef" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">ElementRef</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/renderer2" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Renderer2</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/templateRef" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">TemplateRef</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/hostListener" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">HostListener</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/directive" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Directive</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/changeDetection" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Change Detection</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/ngclass" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">NgClass</a>
           </li>
         </ul>
       </li>
