--- a/crudangular_1.client/src/app/layout/sidebar/sidebar.component.html
+++ b/crudangular_1.client/src/app/layout/sidebar/sidebar.component.html
@@ -62,6 +62,19 @@
           <li class="my-2">
             <a routerLink="/ngclass" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">NgClass</a>
           </li>
+          <li class="my-2">
+            <a routerLink="/reactiveForm" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Reactive Form</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/apiHttp" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Api Http</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/animacje" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">Animacje</a>
+          </li>
+          <li class="my-2">
+            <a routerLink="/toDO" RouterLinkActive="bg-red-700" class="hover:bg-gray-700 p-2 block">To Doo</a>
+          </li>
+
         </ul>
       </li>
       <li class="my-2">
